added category buttons in one colour and layout

--- a/productlist.html
+++ b/productlist.html
@@ -250,8 +250,18 @@
       </div>
     </section>
     <main>
-      <h2>Shop</h2>
-      <section class="filter"></section>
+      <div class="title-and-filter">
+        <h2>Shop</h2>
+        <section class="filter">
+          <button onclick="document.location='productlist.html'">Kits</button>
+          <button onclick="document.location='productlist.html'">
+            Add-ons
+          </button>
+          <button onclick="document.location='productlist.html'">
+            Casting
+          </button>
+        </section>
+      </div>
       <section class="productlist">
         <article class="product">
           <img
