--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/root.css" />
+    <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <title>Document</title>
   </head>
@@ -249,6 +251,103 @@
         /></a>
       </div>
     </section>
+    <section id="title">
+      <h1 id="decorative">Hi! My name is Bea</h1>
+      <img src="assets/about-image.jpg" alt="bea-about-image" />
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et parturient
+        magna nunc, lectus risus ultricies pellentesque. Semper lobortis
+        praesent elementum suspendisse auctor consectetur dui, eget in.
+      </p>
+    </section>
+    <section id="howItWorks">
+      <article>
+        <h2>What is BYU?</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit
+          auctor tortor faucibus commodo. Congue potenti tellus et ornare
+          consequat. Turpis tellus non dictum amet tempor. Quam sollicitudin
+          elementum lobortis non a pulvinar vulputate quis quis. Ac faucibus
+          quis pretium commodo ultrices varius. Sagittis arcu gravida cras vel
+          id. Vestibulum in tincidunt aliquam neque. Sed eget et vitae velit
+          accumsan. Id semper ac porta nunc viverra a. Imperdiet id a odio
+          eleifend volutpat enim dignissim urna. Risus eleifend.
+        </p>
+      </article>
+    </section>
+    <section id="stepByStep">
+      <h2>How it works</h2>
+      <div id="stepsWrapper">
+        <div class="oneStep">
+          <img src="css/small-circle.svg" alt="" />
+          <h4>Choose your kit</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
+            feugiat pretium vitae duis rhoncus
+          </p>
+        </div>
+
+        <div class="oneStep">
+          <img src="css/small-circle.svg" alt="" />
+          <h4>Choose your kit</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
+            feugiat pretium vitae duis rhoncus
+          </p>
+        </div>
+
+        <div class="oneStep">
+          <img src="css/small-circle.svg" alt="" />
+          <h4>Choose your kit</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
+            feugiat pretium vitae duis rhoncus
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <img src="assets/Black_logo 1.svg" alt="logo-icon" />
+      <p id="description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus viverra
+        consectetur adipiscing elit. Rhoncus viverra
+      </p>
+      <p id="contact">+45 12 34 56 78 | hello@byustudio.dk</p>
+      <div id="some">
+        <img src="assets/ig_logo.svg" alt="" /><img
+          src="assets/facebook_logo.svg"
+          alt=""
+        /><img src="assets/Vector.svg" alt="" />
+      </div>
+      <div id="footerNav">
+        <ul>
+          <li><h5>Shop</h5></li>
+          <li><a href="">Kits</a></li>
+          <li><a href="">Add-ons</a></li>
+          <li><a href="">Casting</a></li>
+        </ul>
+        <ul>
+          <li><h5>We Are</h5></li>
+          <li><a href="">About BYU</a></li>
+          <li><a href="">Manifestop</a></li>
+          <li><a href="">Sustainability</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+        <ul>
+          <li><h5>Get Started</h5></li>
+          <li><a href="">Inspiration</a></li>
+          <li><a href="">Tutorials</a></li>
+          <li><a href="">FAQ's</a></li>
+        </ul>
+      </div>
+      <div id="legal">
+        <a href="">Privacy policy | </a>
+        <a href="">FAQ's | </a>
+        <a href="">Customer service | </a>
+        <a href="">Shipping | </a>
+        <a href="">Terms and conditions</a>
+      </div>
+    </footer>
   </body>
   <script src="js/hamburger.js"></script>
 </html>
