--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
         <img src="assets/cart.svg" alt="cart-icon" />
       </nav>
     </header>
+    <div id="thickLines"><img src="css/thick-lines-bg.svg" alt="" /></div>
     <section class="sec-hamburger">
       <div class="head-hamburger">
         <img
