fetched products in JS

--- a/productlist.html
+++ b/productlist.html
@@ -253,9 +253,11 @@
       <div class="title-and-filter">
         <h2>Shop</h2>
         <section class="filter">
-          <button onclick="document.location='productlist.html'">Kits</button>
+          <button onclick="document.location='productlist.html?category=kits'">
+            Kits
+          </button>
           <button onclick="document.location='productlist.html'">
-            Add-ons
+            Refills
           </button>
           <button onclick="document.location='productlist.html'">
             Casting
@@ -348,4 +350,5 @@
     </div>
   </footer>
   <script src="js/hamburger.js"></script>
+  <script src="js/productlist.js"></script>
 </html>
