changed icons (steps)

--- a/about.html
+++ b/about.html
@@ -280,7 +280,7 @@
       <h2>How it works</h2>
       <div id="stepsWrapper">
         <div class="oneStep">
-          <img src="css/small-circle.svg" alt="" />
+          <img src="assets/step-one.svg" alt="" />
           <h4>Choose your kit</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
@@ -289,7 +289,7 @@
         </div>
 
         <div class="oneStep">
-          <img src="css/small-circle.svg" alt="" />
+          <img src="assets/step-two.svg" alt="" />
           <h4>Choose your kit</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
@@ -298,7 +298,7 @@
         </div>
 
         <div class="oneStep">
-          <img src="css/small-circle.svg" alt="" />
+          <img src="assets/step-three.svg" alt="" />
           <h4>Choose your kit</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
