changed small images

--- a/sustainanability.html
+++ b/sustainanability.html
@@ -252,6 +252,8 @@
         /></a>
       </div>
     </section>
+    <div id="thickLines"><img src="css/thick-lines-bg.svg" alt="" /></div>
+
     <section id="title">
       <h1 id="decorative">Sustainability</h1>
       <p>
@@ -265,8 +267,8 @@
         <h2>We use sustainable materials</h2>
         <div class="stepsWrapper">
           <div class="oneStep">
-            <img src="assets/step-one.svg" alt="" />
-            <h4>Choose your kit</h4>
+            <img src="assets/gold.jpg" alt="" />
+            <h4>14k gold</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
               feugiat pretium vitae duis rhoncus
@@ -274,8 +276,8 @@
           </div>
 
           <div class="oneStep">
-            <img src="assets/step-two.svg" alt="" />
-            <h4>Choose your kit</h4>
+            <img src="assets/silver.jpg" alt="" />
+            <h4>Silver</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
               feugiat pretium vitae duis rhoncus
@@ -288,8 +290,8 @@
       <h2>How it works</h2>
       <div class="stepsWrapper">
         <div class="oneStep">
-          <img src="assets/step-one.svg" alt="" />
-          <h4>Choose your kit</h4>
+          <img src="assets/packaging.jpg" alt="" />
+          <h4>Recycable packaging</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
             feugiat pretium vitae duis rhoncus
@@ -297,8 +299,8 @@
         </div>
 
         <div class="oneStep">
-          <img src="assets/step-two.svg" alt="" />
-          <h4>Choose your kit</h4>
+          <img src="assets/natural.jpg" alt="" />
+          <h4>Natural dye</h4>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
             feugiat pretium vitae duis rhoncus
