back to the hard-coded phase

--- a/productpage.html
+++ b/productpage.html
@@ -218,69 +218,67 @@
     </div>
     <h2>What is in the kit</h2>
     <p class="kit-content">Item 1, item 2, item 3</p>
-    <form class="ordering-form"></form>
-    <div class="title-form">
-      <h2>Extra wax</h2>
-      <p class="explanation-box">&nbsp;?&nbsp;</p>
-    </div>
-    <!-- wax section -->
-    <section class="wax-selection-container"></section>
-    <!--<div class="label-group">
-      <label for="blue-wax" class="wax-selection">
-        <input type="checkbox" id="blue-wax" name="blue-wax" value="Blue wax">
-        Hard blue wax, 10g<span class="checkmark">
-      </label></span>
-      <p class="explanation-box">&nbsp;?&nbsp;</p>
-      <p>DKK <span>515</span></p>
-    </div>
-    <div class="label-group"><label for="red-wax" class="wax-selection">
-        <input type="checkbox" id="red-wax" name="red-wax" value="Red wax">
-        Soft red wax, 10g<span class="checkmark">
-      </label></span>
-      <p class="explanation-box">&nbsp;?&nbsp;</p>
-      <p>DKK <span>515</span></p>
-    </div>
-    <div class="label-group"><label for="pink-wax" class="wax-selection"><input type="checkbox" id="pink-wax"
-          name="pink-wax" value="Pink wax">Very soft pink wax,
-        10g<span class="checkmark">
-      </label></span>
-      <p class="explanation-box">&nbsp;?&nbsp;</p>
-      <p>DKK <span>515</span></p>
-    </div>-->
-
-    <!-- prepay selection -->
-    <div class="title-form">
-      <h2>Prepay for casting</h2>
-      <p class="explanation-box">&nbsp;?&nbsp;</p>
-    </div>
-    <section class="casting-selection-container"></section>
-    <!--<div class="label-group">
-      <label for="silver" class="wax-selection"><input type="radio" id="silver" name="casting" value="silver">
-        Yes, cast my piece in SILVER<span class="checkmark radio-btn"></span></label></span>
-      <p class="explanation-box">&nbsp;?&nbsp;</p>
-      <p>DKK <span>515</span></p>
-    </div>
-    <div class="label-group">
-      <label for="gold" class="wax-selection"><input type="radio" id="gold" name="casting" value="gold">
-        Yes, cast my piece in GOLD<span class="checkmark radio-btn"></span></label></span>
-      <p class="explanation-box">&nbsp;?&nbsp;</p>
-      <p>DKK <span>515</span></p>
-    </div>
-    <div class="label-group">
-      <label for="nothing" class="wax-selection"><input type="radio" id="nothing" name="casting" value="nothing">
-        I will order casting later<span class="checkmark radio-btn"></span></label></span>
-      <p class="explanation-box">&nbsp;?&nbsp;</p>
-      <p>DKK <span>515</span></p>
-    </div>-->
-    </form>
-    <div class="total-add-container">
-      <div class="total-container flex-container">
-        <h2>Your total</h2>
-        <p>DKK <span>300</span></p>
+    <form class="ordering-form">
+      <div class="title-form">
+        <h2>Extra wax</h2>
+        <p class="explanation-box">&nbsp;?&nbsp;</p>
       </div>
-      <div class="align-button">
-        <button class="add-to-cart">Add to cart</button></div>
-    </div>
+      <!-- wax section -->
+      <div class="label-group">
+        <label for="blue-wax" class="wax-selection">
+          <input type="checkbox" id="blue-wax" name="blue-wax" value="Blue wax">
+          Hard blue wax, 10g<span class="checkmark">
+        </label></span>
+        <p class="explanation-box">&nbsp;?&nbsp;</p>
+        <p>DKK <span>515</span></p>
+      </div>
+      <div class="label-group"><label for="red-wax" class="wax-selection">
+          <input type="checkbox" id="red-wax" name="red-wax" value="Red wax">
+          Soft red wax, 10g<span class="checkmark">
+        </label></span>
+        <p class="explanation-box">&nbsp;?&nbsp;</p>
+        <p>DKK <span>515</span></p>
+      </div>
+      <div class="label-group"><label for="pink-wax" class="wax-selection"><input type="checkbox" id="pink-wax"
+            name="pink-wax" value="Pink wax">Very soft pink wax,
+          10g<span class="checkmark">
+        </label></span>
+        <p class="explanation-box">&nbsp;?&nbsp;</p>
+        <p>DKK <span>515</span></p>
+      </div>
+
+      <!-- prepay selection -->
+      <div class="title-form">
+        <h2>Prepay for casting</h2>
+        <p class="explanation-box">&nbsp;?&nbsp;</p>
+      </div>
+      <div class="label-group">
+        <label for="silver" class="wax-selection"><input type="radio" id="silver" name="casting" value="silver">
+          Yes, cast my piece in SILVER<span class="checkmark radio-btn"></span></label></span>
+        <p class="explanation-box">&nbsp;?&nbsp;</p>
+        <p>DKK <span>515</span></p>
+      </div>
+      <div class="label-group">
+        <label for="gold" class="wax-selection"><input type="radio" id="gold" name="casting" value="gold">
+          Yes, cast my piece in GOLD<span class="checkmark radio-btn"></span></label></span>
+        <p class="explanation-box">&nbsp;?&nbsp;</p>
+        <p>DKK <span>515</span></p>
+      </div>
+      <div class="label-group">
+        <label for="nothing" class="wax-selection"><input type="radio" id="nothing" name="casting" value="nothing">
+          I will order casting later<span class="checkmark radio-btn"></span></label></span>
+        <p class="explanation-box">&nbsp;?&nbsp;</p>
+        <p>DKK <span>515</span></p>
+      </div>
+      <div class="total-add-container">
+        <div class="total-container flex-container">
+          <h2>Your total</h2>
+          <p>DKK <span>300</span></p>
+        </div>
+        <div class="align-button">
+          <button class="add-to-cart">Add to cart</button></div>
+      </div>
+    </form>
     <div class="additional-info">
       <h3>Description</h3>
       <p class="kit-description"></p>
@@ -298,19 +296,19 @@
   <!-- Wax template ↓ -->
   <template class="wax-template">
     <div class="label-group">
-      <label for="blue-wax" class="wax-selection">
-        <input type="checkbox" id="blue-wax" name="blue-wax" value="Blue wax">
-        Hard blue wax, 10g<span class="checkmark">
+      <label for="" class="wax-selection">
+        <input type="checkbox" id="" name="" value="" class="wax-input">
+        <span class="checkmark">
       </label></span>
       <p class="explanation-box">&nbsp;?&nbsp;</p>
-      <p>DKK <span>515</span></p>
+      <p>DKK <span class="wax-price">515</span></p>
     </div>
   </template>
   <!-- Casting template ↓ -->
-  <template>
+  <template class="casting-template">
     <div class="label-group">
-      <label for="silver" class="wax-selection">
-        <input type="radio" id="silver" name="casting" value="silver">
+      <label for="silver" class="wax-selection casting-selection">
+        <input type="radio" id="silver" name="casting" value="silver" class="casting-input">
         Yes, cast my piece in SILVER<span class="checkmark radio-btn"></span></label>
       <p class="explanation-box">&nbsp;?&nbsp;</p>
       <p>DKK <span>515</span></p>
