styling and adding shipping + subtotal together

--- a/checkout-info.html
+++ b/checkout-info.html
@@ -390,12 +390,12 @@
         </section>
         <div class="buttonflex">
           <button type="submit">Continue to Payment</button>
-          <a href="index.html"> Return to frontpage</a>
+          <a href="home.html"> Return to frontpage</a>
         </div>
       </form>
       <section class="ordersummarydesktop">
         <div class="ordersummarydesktopcontent">
-          <h2>Order Summary</h2>
+          <h2 class="lessmarginplease">Order Summary</h2>
           <div class="templateparent-desktop">
             <template class="template-desktop">
               <div class="cartitem">
@@ -417,9 +417,9 @@
           </div>
           <div>
             <div class="divider"></div>
-            <div class="totalprice">
+            <div class="totalprice priceflex">
               <p>Total:</p>
-              <p class="calctotalprice">DKK 123.00</p>
+              <p class="calctotalprice">DKK <span>123.00</span></p>
             </div>
           </div>
         </div>
