--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -319,10 +319,19 @@
           </div>
           <div>
             <div class="divider"></div>
-            <div class="totalprice">
-              <p>Total:</p>
-              <p class="calctotalprice">DKK 123.00</p>
+            <div class="subtotal priceflex">
+              <p>Subtotal:</p>
+              <p class="calcsubtotal">DKK <span>123.00</span></p>
             </div>
+            <div class="shippingprice priceflex">
+              <p>Shipping:</p>
+              <p class="calcshippingprice">DKK <span>123.00</span></p>
+            </div>
+            <div class="totalprice pay priceflex">
+              <p>Total:</p>
+              <p class="calctotalprice">DKK <span>123.00</span></p>
+            </div>
+            <div class="divider"></div>
           </div>
         </span>
       </div>
@@ -451,10 +460,11 @@
               <p>Shipping:</p>
               <p class="calcshippingprice">DKK <span>123.00</span></p>
             </div>
-            <div class="totalprice priceflex">
+            <div class="totalprice pay priceflex">
               <p>Total:</p>
               <p class="calctotalprice">DKK <span>123.00</span></p>
             </div>
+            <div class="divider"></div>
           </div>
         </div>
       </section>
