made button change colour based on selected products

--- a/productlist.html
+++ b/productlist.html
@@ -253,13 +253,23 @@
       <div class="title-and-filter">
         <h2>Shop</h2>
         <section class="filter">
-          <button onclick="document.location='productlist.html?kits=true'">
+          <button
+            onclick="document.location='productlist.html?kits=true'"
+            id="kits-button"
+            class="selected"
+          >
             Kits
           </button>
-          <button onclick="document.location='productlist.html?refills=true'">
+          <button
+            onclick="document.location='productlist.html?refills=true'"
+            id="refills-button"
+          >
             Refills
           </button>
-          <button onclick="document.location='productlist.html?casting=true'">
+          <button
+            onclick="document.location='productlist.html?casting=true'"
+            id="casting-button"
+          >
             Casting
           </button>
         </section>
