--- a/productlist.html
+++ b/productlist.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/productlist.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <title>Document</title>
   </head>
   <body>
