no luck. can't find the lenght of HTML collection?

--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -437,7 +437,9 @@
                 <img class="cartproductimage" src="" alt="product image" />
                 <div class="cartproducttext">
                   <div>
-                    <p class="cartproductname">Product Name</p>
+                    <p class="cartproductname">
+                      Product Name <span>X</span><span class="quantity">3</span>
+                    </p>
                     <!-- <p class="cartproductdescription">product description</p> -->
                   </div>
                   <p class="cartproductprice"><span>234</span> DKK</p>
@@ -454,7 +456,7 @@
             <div class="divider"></div>
             <div class="subtotal priceflex">
               <p>Subtotal:</p>
-              <p class="calcsubtotal">DKK <span>123.00</span></p>
+              <p class="calcsubtotal">DKK <span></span></p>
             </div>
             <div class="shippingprice priceflex">
               <p>Shipping:</p>
