--- a/productpage.html
+++ b/productpage.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="X-UzA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="css/productpage.css">
   <link rel="stylesheet" href="css/root.css">
   <link rel="stylesheet" href="css/cart.css">
   <!-- <link rel="stylesheet" href="css/menu.css"> -->
-  <title>Document</title>
+  <title>BYU studio jewellery</title>
 </head>
 
 <body>
