--- a/checkout-info.html
+++ b/checkout-info.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/checkout.css" />
@@ -13,8 +14,10 @@
     <header>
       <nav>
         <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-        <a href=""><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
-        <img src="assets/cart.svg" alt="cart-icon" />
+        <a href="home.html"
+          ><img src="assets/Black_logo 1.svg" alt="logo-icon"
+        /></a>
+        <img class="currenttabcheckout" src="assets/cart.svg" alt="cart-icon" />
       </nav>
     </header>
     <section class="sec-hamburger">
