--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/checkout.css" />
     <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/nav.css" />
     <title>Document</title>
   </head>
 
@@ -14,8 +15,10 @@
     <header>
       <nav>
         <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-        <a href=""><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
-        <img src="assets/cart.svg" alt="cart-icon" />
+        <a href="home.html"
+          ><img src="assets/Black_logo 1.svg" alt="logo-icon"
+        /></a>
+        <img class="currenttabcheckout" src="assets/cart.svg" alt="cart-icon" />
       </nav>
     </header>
     <section class="sec-hamburger">
